animation overflow fixes for about and donate section

--- a/src/AboutSection/AboutSection.css
+++ b/src/AboutSection/AboutSection.css
@@ -38,19 +38,21 @@
     width: 90%;
     margin: auto;
     overflow-y: auto;
+    overflow-x: hidden;
     padding-left: 15px;
     padding-right: 15px;
     max-width: 600px;
     max-height: calc(100% - 350px);
     border-top: 1px solid gray;
     border-bottom: 1px solid gray;
-    -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    
 }
 
 .AboutContent p {
     color: white;
     text-align: center;
+    -webkit-animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: slide-in-right 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
 
